--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,18 @@
-<div claass="wrapper">
-    <h1>Three D Four</h1>
+<div class="wrapper">
+    <h1 class="hdg hdg_med">
+        <%= link_to 'Three D Four', root_path %>
+    </h1>
+
+    <% if user_signed_in? %>
+
+
+        <%= link_to current_user.username, edit_user_registration_path %> |
+        <%= button_to 'Logout',
+            destroy_user_session_path,
+            method: :delete %>
+    <% else %>
+        <%= link_to "Sign up", new_user_registration_path %> |
+        <%= link_to "Login", new_user_session_path %>
+    <% end %>
+
 </div>
