--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,7 @@
 
     <% if user_signed_in? %>
 
-
-        <%= link_to current_user.username, edit_user_registration_path %> |
+        <%= link_to current_user.email, edit_user_registration_path %> |
         <%= button_to 'Logout',
             destroy_user_session_path,
             method: :delete %>
